--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-youtube": "^10.1.0",
     "sharp": "^0.31.3",
     "tailwindcss": "^3.0.23",
+    "tailwindcss-textshadow": "^2.1.3",
     "zustand": "^4.3.3"
   },
   "devDependencies": {
